# glavra

./: .gitignore  Cargo.toml  TODO
src/: auth.rs  errcode.rs  lib.rs  main.rs  message.rs  register.rs  server_util.rs  strings.rs  util.rs  vote.rs
src/actions/: auth.rs  delete.rs  edit.rs  history.rs  message.rs  mod.rs  register.rs  room.rs  vote.rs
src/enums/: errcode.rs  mod.rs  privtype.rs
src/types/: mod.rs  vote.rs
