[package]
name = "glavra"
version = "0.1.0"
authors = ["KeyboardFire <andy@keyboardfire.com>"]

[dependencies]
serde = "*"
serde_json = "*"
time = "*"
rust-crypto = "*"
rand = "*"
url = "*"

[dependencies.ws]
version = "*"
features = ["ssl"]

[dependencies.postgres]
version = "*"
features = ["with-time"]
